--- a/src/styles/_menuBalance.scss
+++ b/src/styles/_menuBalance.scss
@@ -4,6 +4,18 @@
     background: linear-gradient(45deg, rgb(122, 169, 169)10%, #f8f9fa 30%);
     @include make-flex();
     @include height-width(100%, 100%);
+    background-size: 150% 100%;
+    animation:  slideBackground 1s ease-in-out forwards;
+
+    @keyframes slideBackground {
+        from {
+            background-position: 80% 0;
+        }
+        to {
+            background-position: 0% 0;
+        }
+    }
+
     .current-money-div{
         @include height-width(50%, 50%);
         @include make-flex();
