--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,21 @@
     flex-direction: column;
     background: linear-gradient(-45deg, rgb(122, 169, 169)10%, #f8f9fa 30%);
 }
+
+#app.app-background{
+   background: linear-gradient(45deg, rgb(122, 169, 169)10%, #f8f9fa 30%);
+
+    background-size: 150% 100% ;
+    animation:  slideBackground 1s ease-in-out forwards ;
+}
+@keyframes slideBackground {
+    from {
+        background-position: 80% 0 ;
+    }
+    to {
+        background-position: 0% 0 ;
+    }
+}
   
 
 
