history of transactions now available for the client.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @use 'login-registForms';
 @use 'menuBalance';
 @use 'header';
+@use 'header-menu-info';
 
  #app{
     @include height-width(100%, 100%);
