first income option added

--- a/src/styles/_categories.scss
+++ b/src/styles/_categories.scss
@@ -24,10 +24,10 @@
         margin: auto;
         margin-top: 8%;
     }
-    .categories-div, .categories-div2{
+    .category-income-div, .category-expense-div{
         text-align: center;
     }
-    .categories-div2{
+    .category-expense-div{
         margin-left: 10%;
     }
 
