--- a/src/styles/_menuBalance.scss
+++ b/src/styles/_menuBalance.scss
@@ -3,8 +3,8 @@
 .container{
     @include make-flex();
     @include height-width(100%, 100%);
-    justify-content: start;
     flex-direction: column;
+    gap: 60px;
 
     .current-money-div{
         @include height-width(42%, 50%);
