--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,9 +6,11 @@
 @use 'header';
 @use 'header-menu-info';
 @use 'categories';
+@use 'movements-list';
 
  #app{
-    @include height-width(100%, 100%);
+    //@include height-width(100vh, 100%);
+    min-height: 100vh;
     @include make-flex();
     flex-direction: column;
     background: linear-gradient(-45deg, rgb(122, 169, 169)10%, #f8f9fa 30%);
@@ -16,8 +18,8 @@
 
 #app.app-background{
    background: linear-gradient(45deg, rgb(122, 169, 169)10%, #f8f9fa 30%);
-
-    background-size: 150% 100% ;
+   justify-content: start;
+    background-size: 150% 100%;
     animation:  slideBackground 1s ease-in-out forwards ;
 }
 @keyframes slideBackground {
