now in the input for description and amount of the category user wants to use and save a new income, changes the balance text in real time.

--- a/src/styles/_menuBalance.scss
+++ b/src/styles/_menuBalance.scss
@@ -4,6 +4,8 @@
     @include make-flex();
     @include height-width(100%, 100%);
     flex-direction: column;
+    position: relative;
+    overflow: visible;
     gap: 60px;
 
     .current-money-div{
