--- a/src/styles/_movements-list.scss
+++ b/src/styles/_movements-list.scss
@@ -1,34 +1,38 @@
 @use 'mixins' as *;
 
 #movements-list{
-    @include height-width(600px, 50%);
-    @include make-flex();
+    @include height-width(650px, 50%);
+    text-align: center;
+    overflow-y: auto;
+    width: 50%;
+    display: block;
     flex-direction: column;
     font-family: 'Nunito', sans-serif;
-    background-color: #f4f6f8;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
     border-radius: 12px;
+    margin-bottom: 2%;
+    padding:15px;
+    position: relative;
     h3{
         font-size: 2em;
-        margin-bottom: 1%;
+        margin: 10px 0;
     }
     ul{
         list-style: none;
         color: #303030;
-        overflow-y: auto !important;
-        @include height-width(100%, 98%);
-        @include make-flex();
+        overflow-y: auto;
+        @include height-width(auto, 98%);
+        display: block;
         flex-direction: column;
+        padding: 0;
         font-size: 1.3em;
-        overflow: hidden;
 
-        
         li{
             width: 100%;
             @include make-flex();
             justify-content: space-between;
-            padding: 15px; /* Espacio interno */
-            margin-bottom: 10px; /* Separación entre filas */
+            margin-top: 17px; /* Separación entre filas */
+            padding: 11px;
             background-color: #f9f9f9; /* Fondo claro */
             border-radius: 8px; /* Bordes redondeados */
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra sutil */
@@ -39,25 +43,21 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15); /* Sombra más pronunciada */
         }
     }
-    ul::-webkit-scrollbar {
-        width: 5px; /* Ancho del scrollbar */
-    }
-    
-    ul::-webkit-scrollbar-track {
-        background: #f4f6f8; /* Mismo color que el fondo */
-        border-radius: 12px;
-    }
-    
-    ul::-webkit-scrollbar-thumb {
-        background: #bebdbd; /* Gris claro para la barra */
-        border-radius: 12px;
-    }
-    
-    ul::-webkit-scrollbar-thumb:hover {
-        background: #aaa; /* Gris más oscuro al pasar el mouse */
-    }
+}
+#movements-list::-webkit-scrollbar {
+    width: 5px;
+}
 
+#movements-list::-webkit-scrollbar-track {
+    background: #f4f6f8; 
+    border-radius: 12px;
+}
 
+#movements-list::-webkit-scrollbar-thumb {
+    background: #bebdbd; 
+    border-radius: 12px;
+}
 
-
+#movements-list::-webkit-scrollbar-thumb:hover {
+    background: #aaa; 
 }
